# hako

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-module.yml  release.yml  ts-test.yml
bridge/: CMakeLists.txt  banned.h  build.h  hako.c  hako.h
bridge/cmake/: GetGitVersion.cmake  ParseWasiVersion.cmake  version.h.in  wasi_version.h.in
embedders/ts/: .gitignore  README.md  biome.json  build.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
embedders/ts/patches/: uwasi+1.4.0.patch
embedders/ts/src/: index.ts
embedders/ts/src/etc/: errors.ts  ffi.ts  types.ts  utils.ts
embedders/ts/src/helpers/: asyncify-helpers.ts  deferred-promise.ts  interrupt-helpers.ts  iterator-helper.ts
embedders/ts/src/host/: callback.ts  container.ts  runtime.ts
embedders/ts/src/mem/: lifetime.ts  memory.ts
embedders/ts/src/runtime/: callback.ts  container.ts  runtime.ts
embedders/ts/src/vm/: cmodule.ts  context.ts  value-factory.ts  value.ts  vm-interface.ts
embedders/ts/tests/: asyncify-helpers.test.ts  context.test.ts  decoder.test.ts  runtime.test.ts  vf.test.ts
embedders/ts/tools/: generate-builds.ts  update-verison.ts
examples/repl/: README.md  embed.html  index.html  package.json  rollup.config.mjs  tsconfig.json
examples/stresstest/: README.md  index.ts  package.json  stresstest.sln  tsconfig.json
examples/stresstest/client/: Program.cs  hako-stress-test.csproj
examples/stresstest/client/tests/: 01-basic-arithmetic.js  02-string-manipulation.js  03-array-operations.js  04-object-manipulation.js  05-recursive-functions.js  06-error-handling.js  07-closure-and-scope.js  08-advanced-math.js  09-date-manipulation.js  10-memory-intensive.js  11-regex-operations.js  12-json-operations.js  13-cpu-intensive.js  14-set-and-map.js  15-function-calls.js
examples/stresstest/public/: dashboard.js  index.html  styles.css
patches/: 0001-fix-wasi-c-errors.patch  0002-qol-features.patch  0003.patch  0004.patch  0005-proxy-mem-leak.patch  0006-json-stack-overflow.patch  0007.patch  0008.patch  0009-string-hash.patch  0010-regex-uni.patch  0011.patch  0012.patch  0013.patch  0014.patch  0015.patch  0016.patch  0017.patch  0018.patch  0019-define-own-prop.patch  0020.patch  0021.patch  0022-forof-async.patch  0023.patch  0024-findlast.patch  0025-superdel.patch  0026.patch  0027.patch  0028.patch  0029.patch  0030-ctx-int.patch  0031-remove-usestrip.patch  0032-cyclic-label.patch  0033.patch  0034.patch  0035.patch  0036.patch  0037.patch  0038-bson-overflow.patch  0039.patch  0040-opt-chaining.patch  (+33 more)
tools/: build.sh  envsetup.sh  gen.py  patch.sh
